--- a/dashboard.css
+++ b/dashboard.css
@@ -1,4 +1,4 @@
-#map-content-div
+      #map-content-div
 {
 	position: relative;
 	top: 0;
@@ -10,21 +10,78 @@
 	position: relative;
 	top: 0;
 	left: 0;
-	width: 600px;
+	width: 450px;
 }
 
 .visualization
 {
-	margin-top: 10px;
+	/*margin-top: 10px;*/
 }
 .summary
 {
-	margin-top: 10px;
+	/*margin-top: 10px;*/
 }
 .top-row
 {
-	height: 100px;
-	background-color: grey;
+	height: 70px;
+	background-color: white;
 	font-face: "Courier";
+   padding-left: 20px;
+   
+}
+.tab-content
+{
+   position: relative;
+}
+#live, #today, #week{
+  position: absolute;
+  background-color: white;
+/*  border-radius: 5px;
+*/  padding: 20px;
+}
+#live
+{
+   padding: 50px;
+}
+.main-content
+{
+   background-image: url('background.png');
+   height: 110vh;
+   padding-top: 80px;
+}
+#popChart
+{
+   margin-right: 200px;
+}
+html 
+
+{
+   font-family: 'Roboto', sans-serif;
+}
+.nav-tabs > li
+{
+  background-color: gray;
+  
 }
 
+a
+{
+  color: white;
+}
+.gender-icon
+{
+  width: 30px;
+}
+
+.footer
+{
+  color: white;
+  float: right;
+  margin-right: 50px;
+  margin-top: 50px;
+}
+
+.footer-content
+{
+  background-image: url('background.png');
+}
